fix checkout page mobile alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -882,9 +882,6 @@ select {
 .h-12 {
   height: 3rem;
 }
-.h-600px {
-  height: 600px;
-}
 .min-h-screen {
   min-height: 100vh;
 }
